# VideoGamesOptimizationTechniques

./: .gitignore  CMakeLists.txt  README.md
BitwiseOperations/: CMakeLists.txt  main.cpp
CacheExperiments/: CMakeLists.txt  cache_perf.cpp
CommonHeaders/: CMakeLists.txt
CommonHeaders/Private/: PerformanceCounter.cpp
CommonHeaders/Public/: L1DataCacheSize.h  PerformanceCounter.h
ContainersComparison/: CMakeLists.txt  main.cpp
Docs/: SzymonSwiedrych_l1.odt
DotProduct/: CMakeLists.txt  main.cpp
GaussianElimination/: CMakeLists.txt  main.cpp
KnapsackProblem/: CMakeLists.txt  main.cpp
SieveOfEratosthenes/: CMakeLists.txt  changelog.md  main.cpp
res/: test_data.csv
